---
source: tests/fixtures.rs
expression: program

---
Ok(
    Program {
        stmts: [
            Stmt {
                kind: Fn(
                    Ident {
                        name: "empty",
                        location: Location {
                            start: 3,
                            end: 8,
                        },
                    },
                    [],
                    Ty {
                        name: "int",
                        location: Location {
                            start: 14,
                            end: 17,
                        },
                    },
                    Block {
                        stmts: [
                            Stmt {
                                kind: Ret(
                                    None,
                                ),
                                location: Location {
                                    start: 24,
                                    end: 31,
                                },
                            },
                        ],
                        location: Location {
                            start: 18,
                            end: 33,
                        },
                    },
                ),
                location: Location {
                    start: 0,
                    end: 33,
                },
            },
            Stmt {
                kind: Fn(
                    Ident {
                        name: "with_expression",
                        location: Location {
                            start: 38,
                            end: 53,
                        },
                    },
                    [],
                    Ty {
                        name: "int",
                        location: Location {
                            start: 59,
                            end: 62,
                        },
                    },
                    Block {
                        stmts: [
                            Stmt {
                                kind: Ret(
                                    Some(
                                        Expr {
                                            kind: Binary(
                                                Add,
                                                Expr {
                                                    kind: Lit(
                                                        Lit {
                                                            kind: Int(
                                                                1,
                                                            ),
                                                            location: Location {
                                                                start: 76,
                                                                end: 77,
                                                            },
                                                        },
                                                    ),
                                                    location: Location {
                                                        start: 76,
                                                        end: 77,
                                                    },
                                                },
                                                Expr {
                                                    kind: Lit(
                                                        Lit {
                                                            kind: Int(
                                                                2,
                                                            ),
                                                            location: Location {
                                                                start: 80,
                                                                end: 81,
                                                            },
                                                        },
                                                    ),
                                                    location: Location {
                                                        start: 80,
                                                        end: 81,
                                                    },
                                                },
                                            ),
                                            location: Location {
                                                start: 76,
                                                end: 81,
                                            },
                                        },
                                    ),
                                ),
                                location: Location {
                                    start: 69,
                                    end: 82,
                                },
                            },
                        ],
                        location: Location {
                            start: 63,
                            end: 84,
                        },
                    },
                ),
                location: Location {
                    start: 35,
                    end: 84,
                },
            },
        ],
        location: Location {
            start: 0,
            end: 84,
        },
    },
)
